added footer & wrapping for mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
     </template>
 
-    <div id="Placeholder"></div>
+    <div id="Placeholder" style="height: 447px;"></div>
+    <br><br>
+    <div>built with <a href="https://mainnet.cash/">Mainnet.cash</a></div>
 </body>
 
 </html>
