--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <h1 style="font-size: 40px;">BCH Watchlist</h1>
     <div>Enter Bitcoin Cash address to add to watchlist:</div>
     <br>
-    <input type="text" id="search" placeholder="BCH address" style="width: 250px;" />
+    <input type="text" id="inputAddr" placeholder="BCH address" style="width: 250px;" />
     <button id="myBtn" onclick="onAdd()">ADD</button>
-    <div id="error"></div>
 
     <template id="address-template" style="text-align: center;">
         <div style="width: 330px; margin: 40px 20px; position: relative;">
+            <input type="text" id="inputName" placeholder="name"
+                style="width: 160px;position: absolute;left: 80px;border:0;text-align: center;" />
             <div style="cursor: pointer; position: absolute;right: 40px;" id="x">X</div>
             <img src="https://cdn.mainnet.cash/wait.svg" style="width: 15em;" id="deposit">
             <div id="addr" style="overflow-wrap: anywhere;"></div>
