--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 style="font-size: 40px;">BCH Watchlist</h1>
+    <h1>BCH Watchlist</h1>
     <div>Enter Bitcoin Cash address to add to watchlist:</div>
     <div class="container">
         <input type="text" id="inputAddr" placeholder="BCH address" />
@@ -35,7 +35,6 @@
     </template>
 
     <div id="Placeholder"></div>
-    <br>
     <footer>
         <a href="https://github.com/mr-zwets/BCH-Watchlist" target="_blanc">
             <img class="githublogo" src="./github.png">
